--- a/package.json
+++ b/package.json
@@ -1,29 +1,31 @@
 {
-  "name": "starterkits",
+  "name": "mesto-backend",
   "version": "1.0.0",
-  "description": "< Добавьте описание проекта в свободной форме >",
-  "main": "dist/app.js",
+  "description": "Mesto backend (TypeScript)",
+  "author": "Petr Dotsenko",
+  "license": "MIT",
   "scripts": {
-    "lint": "npx eslint src/**/*.ts",
-    "build": "tsc",
-    "dev": "ts-node-dev src/app.ts",
     "start": "ts-node src/app.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "< Укажите здесь автора работы >",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/express": "^4.17.13",
-    "@types/node": "^18.6.3",
-    "eslint": "^8.21.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^4.7.4"
+    "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
+    "build": "tsc",
+    "lint": "npx eslint . --ext .ts"
   },
   "dependencies": {
-    "express": "^4.18.1",
-    "mongoose": "^6.5.0"
+    "express": "^4.18.2",
+    "mongoose": "^7.5.0",
+    "body-parser": "^1.20.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.4.2",
+    "@types/body-parser": "^1.19.2",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.3.3",
+    "eslint": "^8.47.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.6",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0"
   }
 }
