--- a/package.json
+++ b/package.json
@@ -11,21 +11,34 @@
     "lint": "npx eslint . --ext .ts"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "body-parser": "^1.20.2",
+    "celebrate": "^15.0.3",
+    "cookie-parser": "^1.4.7",
+    "dotenv": "^17.2.2",
     "express": "^4.18.2",
+    "express-winston": "^4.2.0",
+    "joi": "^18.0.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
-    "body-parser": "^1.20.2"
+    "validator": "^13.15.15",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
-    "@types/node": "^20.4.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/body-parser": "^1.19.2",
-    "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.3",
+    "@types/cookie-parser": "^1.4.9",
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^20.4.2",
+    "@types/validator": "^13.15.3",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.47.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.6",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0"
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.3.3"
   }
 }
